--- a/document/docker/env/docker-compose.yml
+++ b/document/docker/env/docker-compose.yml
@@ -10,32 +10,32 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - /mydata/mysql/data/db:/d/var/lib/mysql #数据文件挂载
-      - /mydata/mysql/data/conf:/d/etc/mysql/conf.d #配置文件挂载
-      - /mydata/mysql/log:/d/var/log/mysql #日志文件挂载
+      - ./mydata/mysql/data/db:/var/lib/mysql #数据文件挂载
+      - ./mydata/mysql/data/conf:/etc/mysql/conf.d #配置文件挂载
+      - ./mydata/mysql/log:/var/log/mysql #日志文件挂载
   redis:
     image: redis:3.2
     container_name: redis
     command: redis-server --appendonly yes
     volumes:
-      - /mydata/redis/data:/d/data #数据文件挂载
+      - ./mydata/redis/data:/data #数据文件挂载
     ports:
       - 6379:6379
-  nginx:
-    image: nginx:1.10
-    container_name: nginx
-    volumes:
-      - /mydata/nginx/nginx.conf:/d/etc/nginx/nginx.conf #配置文件挂载
-      - /mydata/nginx/html:/d/usr/share/nginx/html #静态资源根目录挂载
-      - /mydata/nginx/log:/d/var/log/nginx #日志文件挂载
-    ports:
-      - 80:80
+#  nginx:
+#    image: nginx:1.10
+#    container_name: nginx
+#    volumes:
+#      - ./mydata/nginx/nginx.conf:/etc/nginx/nginx.conf #配置文件挂载
+#      - ./mydata/nginx/html:/usr/share/nginx/html #静态资源根目录挂载
+#      - ./mydata/nginx/log:/var/log/nginx #日志文件挂载
+#    ports:
+#      - 80:80
   rabbitmq:
     image: rabbitmq:3.7.15-management
     container_name: rabbitmq
     volumes:
-      - /mydata/rabbitmq/data:/D/var/lib/rabbitmq #数据文件挂载
-      - /mydata/rabbitmq/log:/d/var/log/rabbitmq #日志文件挂载
+      - ./mydata/rabbitmq/data:/var/lib/rabbitmq #数据文件挂载
+      - ./mydata/rabbitmq/log:/var/log/rabbitmq #日志文件挂载
     ports:
       - 5672:5672
       - 15672:15672
@@ -45,10 +45,10 @@ services:
     environment:
       - "cluster.name=elasticsearch" #设置集群名称为elasticsearch
       - "discovery.type=single-node" #以单一节点模式启动
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m" #设置使用jvm内存大小
+#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m" #设置使用jvm内存大小
     volumes:
-      - /mydata/elasticsearch/plugins:/d/usr/share/elasticsearch/plugins #插件文件挂载
-      - /mydata/elasticsearch/data:/d/usr/share/elasticsearch/data #数据文件挂载
+      - ./mydata/elasticsearch/plugins:/usr/share/elasticsearch/plugins #插件文件挂载
+      - ./mydata/elasticsearch/data:/usr/share/elasticsearch/data #数据文件挂载
     ports:
       - 9200:9200
       - 9300:9300
@@ -67,6 +67,6 @@ services:
     image: mongo:3.2
     container_name: mongo
     volumes:
-      - /mydata/mongo/db:/d/data/db #数据文件挂载
+      - ./mydata/mongo/db:/data/db #数据文件挂载
     ports:
       - 27017:27017
