--- a/mall-user/pom.xml
+++ b/mall-user/pom.xml
@@ -34,12 +34,12 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
-    <dependency>
-        <groupId>org.projectlombok</groupId>
-        <artifactId>lombok</artifactId>
-        <version>1.18.12</version>
-    </dependency>
 
+
+    <dependency>
+        <groupId>com.macro.mall</groupId>
+        <artifactId>mall-common</artifactId>
+    </dependency>
 
 </dependencies>
 
