--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -37,6 +37,13 @@
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
         </dependency>
+
+        <!-- 执行器, 解决 spring-boot-starter-security 401 的问题-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
