--- a/document/docker/env/docker-compose.yml
+++ b/document/docker/env/docker-compose.yml
@@ -13,14 +13,14 @@ services:
       - ./mydata/mysql/data/db:/var/lib/mysql #数据文件挂载
       - ./mydata/mysql/data/conf:/etc/mysql/conf.d #配置文件挂载
       - ./mydata/mysql/log:/var/log/mysql #日志文件挂载
-  redis:
-    image: redis:3.2
-    container_name: redis
-    command: redis-server --appendonly yes
-    volumes:
-      - ./mydata/redis/data:/data #数据文件挂载
-    ports:
-      - 6379:6379
+#  redis:
+#    image: redis:3.2
+#    container_name: redis
+#    command: redis-server --appendonly yes
+#    volumes:
+#      - ./mydata/redis/data:/data #数据文件挂载
+#    ports:
+#      - 6379:6379
 #  nginx:
 #    image: nginx:1.10
 #    container_name: nginx
@@ -30,15 +30,15 @@ services:
 #      - ./mydata/nginx/log:/var/log/nginx #日志文件挂载
 #    ports:
 #      - 80:80
-  rabbitmq:
-    image: rabbitmq:3.7.15-management
-    container_name: rabbitmq
-    volumes:
-      - ./mydata/rabbitmq/data:/var/lib/rabbitmq #数据文件挂载
-      - ./mydata/rabbitmq/log:/var/log/rabbitmq #日志文件挂载
-    ports:
-      - 5672:5672
-      - 15672:15672
+#  rabbitmq:
+#    image: rabbitmq:3.7.15-management
+#    container_name: rabbitmq
+#    volumes:
+#      - ./mydata/rabbitmq/data:/var/lib/rabbitmq #数据文件挂载
+#      - ./mydata/rabbitmq/log:/var/log/rabbitmq #日志文件挂载
+#    ports:
+#      - 5672:5672
+#      - 15672:15672
   elasticsearch:
     image: elasticsearch:6.4.0
     container_name: elasticsearch
@@ -63,10 +63,10 @@ services:
       - "elasticsearch.hosts=http://es:9200" #设置访问elasticsearch的地址
     ports:
       - 5601:5601
-  mongo:
-    image: mongo:3.6.17
-    container_name: mongo
-    volumes:
-      - ./mydata/mongo/db:/data/db #数据文件挂载
-    ports:
-      - 27017:27017
+#  mongo:
+#    image: mongo:3.6.17
+#    container_name: mongo
+#    volumes:
+#      - ./mydata/mongo/db:/data/db #数据文件挂载
+#    ports:
+#      - 27017:27017
