--- a/mall-portal/src/main/resources/application-dev.yml
+++ b/mall-portal/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://106.13.66.5:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
     druid:
@@ -18,12 +18,12 @@ spring:
 
   data:
     mongodb:
-      host: localhost
+      host: 106.13.66.5
       port: 27017
       database: mall-port
 
   redis:
-    host: localhost # Redis服务器地址
+    host: 106.13.66.5 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
@@ -36,7 +36,7 @@ spring:
     timeout: 3000ms # 连接超时时间（毫秒）
 
   rabbitmq:
-    host: localhost
+    host: 106.13.66.5
     port: 5672
     virtual-host: /mall
     username: mall
