--- a/document/docker/env/docker-compose.yml
+++ b/document/docker/env/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       - elasticsearch #kibana在elasticsearch启动之后再启动
     environment:
       - "elasticsearch.hosts=http://es:9200" #设置访问elasticsearch的地址
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ports:
       - 5601:5601
 #  mongo:
