--- a/mall-search/src/main/resources/application-dev.yml
+++ b/mall-search/src/main/resources/application-dev.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://106.13.66.5:3306/mall?useUnicode=true
+    url: jdbc:mysql://localhost:3306/mall?useUnicode=true
 #    url: jdbc:mysql://106.13.66.5:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: atai16014
+    password: root
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
