--- a/mall-user/pom.xml
+++ b/mall-user/pom.xml
@@ -34,7 +34,10 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
-
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
 
     <dependency>
         <groupId>com.macro.mall</groupId>
