--- a/document/docker/env/docker-compose.yml
+++ b/document/docker/env/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./mydata/mysql/data/db:/var/lib/mysql #数据文件挂载
       - ./mydata/mysql/data/conf:/etc/mysql/conf.d #配置文件挂载
       - ./mydata/mysql/log:/var/log/mysql #日志文件挂载
+
 #  redis:
 #    image: redis:3.2
 #    container_name: redis
@@ -39,13 +40,16 @@ services:
 #    ports:
 #      - 5672:5672
 #      - 15672:15672
+
+
   elasticsearch:
-    image: elasticsearch:6.4.0
+    image: elasticsearch:7.6.2
+#    image: elasticsearch:6.4.0
     container_name: elasticsearch
     environment:
       - "cluster.name=elasticsearch" #设置集群名称为elasticsearch
       - "discovery.type=single-node" #以单一节点模式启动
-#      - "ES_JAVA_OPTS=-Xms512m -Xmx512m" #设置使用jvm内存大小
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m" #设置使用jvm内存大小
     volumes:
       - ./mydata/elasticsearch/plugins:/usr/share/elasticsearch/plugins #插件文件挂载
       - ./mydata/elasticsearch/data:/usr/share/elasticsearch/data #数据文件挂载
@@ -53,7 +57,8 @@ services:
       - 9200:9200
       - 9300:9300
   kibana:
-    image: kibana:6.4.0
+    image: kibana:7.6.2
+#    image: kibana:6.4.0
     container_name: kibana
     links:
       - elasticsearch:es #可以用es这个域名访问elasticsearch服务
