--- a/mall-user/pom.xml
+++ b/mall-user/pom.xml
@@ -43,7 +43,15 @@
         <groupId>com.macro.mall</groupId>
         <artifactId>mall-common</artifactId>
     </dependency>
-
+    <dependency>
+        <groupId>org.springframework.kafka</groupId>
+        <artifactId>spring-kafka</artifactId>
+    </dependency>
+<!--    <dependency>-->
+<!--        <groupId>org.apache.kafka</groupId>-->
+<!--        <artifactId>kafka-clients</artifactId>-->
+<!--        <version>2.1.0</version>-->
+<!--    </dependency>-->
 </dependencies>
 
 </project>
