--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>mall-search</module>
         <module>mall-portal</module>
         <module>mall-user</module>
+        <module>mall-movie</module>
     </modules>
 
     <parent>
@@ -32,7 +33,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <skipTests>true</skipTests>
-        <docker.host>http://192.168.3.101:2375</docker.host>
+        <docker.host>http://localhost:2375</docker.host>
         <docker.maven.plugin.version>1.1.0</docker.maven.plugin.version>
         <pagehelper-starter.version>1.2.10</pagehelper-starter.version>
         <pagehelper.version>5.1.8</pagehelper.version>
